--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="modal-content">
             <header class="modal-header">
                 <h3>Kamu latin szöveg</h3>
-                <button class="modal-close"><i class="fa fa-window-close" aria-hidden="true"></i></button>
+                <button class="modal-close">x</button>
             </header>
             <div class="modal-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, delectus 
